[Fix] Swagger 설정 수정